# stage0_template_flask_mongo

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  Pipfile  Pipfile.template  README.md  README.md.template  Refactor.md  docker-compose.yaml  pyproject.toml  pyrightconfig.json  pytest.ini
.github/workflows/: docker-push.yml
.stage0_template/: process.yaml
.stage0_template/Specifications/: architecture.yaml
.stage0_template/test_expected/: Dockerfile  Pipfile  README.md
docs/: Grade.yaml_0.1.0.0_json_schema (7).json  TestRun.yaml_0.1.0.0_json_schema.json  explorer.html  index.html  openapi.yaml
src/: server.py
src/routes/: consume_routes.py  control_routes.py  control_routes.template.py  create_routes.py  create_routes.template.py  grade_routes.py  testrun_routes.py
src/services/: consume_service.py  consume_service.template.py  control_service.py  control_service.template.py  create_service.py  create_service.template.py  grade_service.py  testrun_service.py
src/utils/: __init__.py  exceptions.py
test/: test_e2e.py  test_server.py
test/e2e/: test_common.py  test_consume.py  test_consume.template.py  test_control.py  test_control.template.py  test_create.py  test_create.template.py  test_grade.py  test_testrun.py
test/routes/: test_consume_routes.py  test_control_routes.py  test_create_routes.py  test_grade_routes.py  test_testrun_routes.py
test/services/: test_consume_service.py  test_consume_service.template.py  test_control_service.py  test_control_service.template.py  test_create_service.py  test_create_service.template.py  (+2 more)
(+9 files in other folders)
