[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "template_flask_mongo"
version = "0.1.0"
description = "Flask MongoDB API Template following Creator Dashboard standards"
authors = [{name = "AgileCraftsPeople", email = "AgileCraftsPeople@gmail.com"}]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "pymongo",
    "prometheus-flask-exporter",
    "pyjwt",
]

[project.optional-dependencies]
dev = ["black", "pytest", "unittest", "requests"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "e2e: marks tests as end-to-end tests (deselect with '-m \"not e2e\"')"
]

